2006-06-23  Ben Elliston  <bje@au.ibm.com>

	* dfp.c (decimal_to_decnumber): Do not use decNumberNegate to
	negate dn -- manipulate it directly.

2006-06-22  Roger Sayle  <roger@eyesopen.com>
	    Steven Bosscher  <stevenb.gcc@gmail.com>

	PR target/27531
	* reload1.c (gen_reload): Call mark_jump_label on the new insns
	generated by gen_move_insn to add REG_LABEL notes if necessary.

2006-06-22  Bob Wilson  <bob.wilson@acm.org>

	* config/xtensa/lib1funcs.asm (MIN_ESA): Delete.
	(leaf_entry): Remove use of MIN_ESA.

2006-06-22  Zdenek Dvorak <dvorakz@suse.cz>

	PR rtl-optimization/28121
	* cfgexpand.c (tree_expand_cfg): Clean EDGE_EXECUTABLE flag from
	the entry edge.

2006-06-21  DJ Delorie  <dj@redhat.com>

	* config/m32c/muldiv.md (mulhisi3_i): Only use registers for dest
	(TN-16C-A156A/E).
	(mulhisi3_r): Likewise.

2006-06-21  Richard Sandiford  <richard@codesourcery.com>

	PR middle-end/28034
	* coverage.c (coverage_counter_alloc): Leave the index type
	unspecified.
	(coverage_counter_alloc): Use null arguments for operands 2 and 3
	of the ARRAY_REF.

2006-06-21  Andrew Pinski  <pinskia@physics.uc.edu>

	* doc/invoke.texi (-fopenmp) Move to "Options Controlling C Dialect"
	section from the "Options for Code Generation Conventions".

2006-06-21  Richard Henderson  <rth@redhat.com>

	PR target/26347
	PR target/27082
	* config/alpha/predicates.md (small_symbolic_operand): Deny weak
	symbols.
	(global_symbolic_operand): Allow weak symbols, even if local_p.

2006-06-21  Eric Botcazou  <ebotcazou@adacore.com>

	* tree-ssa-loop-ivopts.c (may_be_nonaddressable_p): New function.
	(find_interesting_uses_address): Punt if above function returns true.

2006-06-21  Richard Guenther  <rguenther@suse.de>

	* configure: Regenerated.

2006-06-21  Joseph Myers  <joseph@codesourcery.com>

	* config/mips/mips.c (function_arg): Where one part of a
	complex argument is in registers and the other part in the stack,
	return a REG not a PARALLEL.
